Restructure: ONE Docusaurus site for ALL apps and versions
MAJOR CHANGE - Better structure:
- Docusaurus at ROOT (docu/)
- All apps under docs/ (app-a, app-b, app-c)
- All versions under each app (v1.0, v2.0, etc.)
- Single unified navigation showing everything

STRUCTURE:
docu/                     # ONE site
├── package.json          # At root
├── docusaurus.config.js  # At root
├── sidebars.js          # Shows all apps + versions
└── docs/
    ├── intro.md         # Main landing
    ├── versions.md      # Version index
    ├── app-a/
    │   ├── intro.md     # App A overview
    │   └── v1.0/        # v1.0 docs
    ├── app-b/
    │   └── v1.0/
    └── app-c/
        └── v1.0/

TO RUN:
  cd docu
  npm install
  npm start

One site, all apps, all versions visible! 🚀

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "app-a-docs",
+  "name": "multi-app-docs",
   "version": "1.0.0",
   "private": true,
+  "description": "Unified documentation for multiple applications",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
